--- a/components.html
+++ b/components.html
@@ -33,6 +33,21 @@
 
     <button @click="showModal = true" class="button">Show Modal</button>
 
+    <br>
+    <br>
+    <!-- Tabs-->
+
+    <tabs>
+      <tab name="About Us" :selected="true">
+        <h1>Here is content for about us tab</h1>
+      </tab>
+      <tab name="About Our Culture">
+        <h1>Here is content for about our culture</h1>
+      </tab>
+      <tab name="About Our Vision">
+        <h1>Here is content for about our vision</h1>
+      </tab>
+    </tabs>
 
     
   </div>
